[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Character/F1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/orange kid login.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/mainMenuScene/mainMenuScipt.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/orange kid stats.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Fonts/orange kid title.tres" type="DynamicFont" id=5]

[node name="MainMenu" type="Node2D"]
scale = Vector2( 0.799728, 0.798897 )
script = ExtResource( 3 )

[node name="GameName" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GameName"]
margin_right = 1280.0
margin_bottom = 49.0

[node name="GameName" type="Label" parent="GameName/CenterContainer"]
margin_left = 559.0
margin_right = 720.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 5 )
text = "Game Name"

[node name="Character" type="HBoxContainer" parent="."]
anchor_bottom = 100.0
margin_top = 100.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Character"]
margin_right = 507.0
margin_bottom = 540.0
texture = ExtResource( 1 )

[node name="CharStats1" type="VBoxContainer" parent="."]
margin_left = 540.0
margin_top = 150.0
margin_right = 650.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="CharStats1"]
margin_right = 110.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "Level:"
align = 2

[node name="Exp" type="Label" parent="CharStats1"]
margin_top = 53.0
margin_right = 110.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 4 )
text = "Exp:"
align = 2

[node name="Gold" type="Label" parent="CharStats1"]
margin_top = 106.0
margin_right = 110.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 4 )
text = "Gold:"
align = 2

[node name="CharStatsInfo1" type="VBoxContainer" parent="."]
margin_left = 647.841
margin_top = 150.0
margin_right = 767.841
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelValue" type="Label" parent="CharStatsInfo1"]
margin_right = 120.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "1"
align = 1

[node name="ExpValue" type="Label" parent="CharStatsInfo1"]
margin_top = 53.0
margin_right = 120.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 4 )
text = "123"
align = 1

[node name="GoldValue" type="Label" parent="CharStatsInfo1"]
margin_top = 106.0
margin_right = 120.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 4 )
text = "55k"
align = 1

[node name="CharStats2" type="VBoxContainer" parent="."]
margin_left = 770.0
margin_top = 150.0
margin_right = 855.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp" type="Label" parent="CharStats2"]
margin_right = 85.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "Hp:"
align = 2

[node name="Att" type="Label" parent="CharStats2"]
margin_top = 53.0
margin_right = 85.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 4 )
text = "Att:"
align = 2

[node name="Def" type="Label" parent="CharStats2"]
margin_top = 106.0
margin_right = 85.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 4 )
text = "Def:"
align = 2

[node name="CharStatsInfo2" type="VBoxContainer" parent="."]
margin_left = 870.0
margin_top = 150.0
margin_right = 990.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpValue" type="Label" parent="CharStatsInfo2"]
margin_right = 120.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "55/100"
align = 1

[node name="AttValue" type="Label" parent="CharStatsInfo2"]
margin_top = 53.0
margin_right = 120.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 4 )
text = "5"
align = 1

[node name="DefValue" type="Label" parent="CharStatsInfo2"]
margin_top = 106.0
margin_right = 120.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 4 )
text = "5"
align = 1

[node name="Menu1" type="VBoxContainer" parent="."]
margin_top = 640.0
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu1"]
margin_right = 1280.0
margin_bottom = 80.0

[node name="Expedition" type="Button" parent="Menu1/HBoxContainer"]
margin_right = 210.0
margin_bottom = 80.0
rect_min_size = Vector2( 210, 80 )
custom_fonts/font = ExtResource( 2 )
text = "Expedition"

[node name="Clan" type="Button" parent="Menu1/HBoxContainer"]
margin_left = 214.0
margin_right = 424.0
margin_bottom = 80.0
rect_min_size = Vector2( 210, 80 )
custom_fonts/font = ExtResource( 2 )
text = "Clan"

[node name="Custom" type="Button" parent="Menu1/HBoxContainer"]
margin_left = 428.0
margin_right = 638.0
margin_bottom = 80.0
rect_min_size = Vector2( 210, 80 )
custom_fonts/font = ExtResource( 2 )
text = "Custom"

[node name="Settings" type="Button" parent="Menu1/HBoxContainer"]
margin_left = 642.0
margin_right = 852.0
margin_bottom = 80.0
rect_min_size = Vector2( 210, 80 )
custom_fonts/font = ExtResource( 2 )
text = "Settings"

[node name="Logout" type="Button" parent="Menu1/HBoxContainer"]
margin_left = 856.0
margin_right = 1066.0
margin_bottom = 80.0
rect_min_size = Vector2( 210, 80 )
custom_fonts/font = ExtResource( 2 )
text = "Logout"

[node name="Menu2" type="HBoxContainer" parent="."]
margin_left = 1080.0
margin_top = 150.0
margin_right = 1280.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu2"]
margin_right = 200.0
margin_bottom = 490.0

[node name="Shop" type="Button" parent="Menu2/VBoxContainer"]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
custom_fonts/font = ExtResource( 2 )
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="Button" parent="Menu2/VBoxContainer"]
margin_top = 84.0
margin_right = 200.0
margin_bottom = 164.0
rect_min_size = Vector2( 200, 80 )
custom_fonts/font = ExtResource( 2 )
text = "Question"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FightTest" type="Button" parent="Menu2/VBoxContainer"]
margin_top = 168.0
margin_right = 200.0
margin_bottom = 248.0
rect_min_size = Vector2( 200, 80 )
custom_fonts/font = ExtResource( 2 )
text = "Fight Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapTest" type="Button" parent="Menu2/VBoxContainer"]
margin_top = 252.0
margin_right = 200.0
margin_bottom = 332.0
rect_min_size = Vector2( 200, 80 )
custom_fonts/font = ExtResource( 2 )
text = "MapTest"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu1/HBoxContainer/Expedition" to="." method="_on_Expedition_pressed"]
[connection signal="pressed" from="Menu1/HBoxContainer/Clan" to="." method="_on_Clan_pressed"]
[connection signal="pressed" from="Menu1/HBoxContainer/Custom" to="." method="_on_Custom_pressed"]
[connection signal="pressed" from="Menu1/HBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu1/HBoxContainer/Logout" to="." method="_on_Logout_pressed"]
[connection signal="pressed" from="Menu2/VBoxContainer/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Menu2/VBoxContainer/Question" to="." method="_on_Question_pressed"]
[connection signal="pressed" from="Menu2/VBoxContainer/FightTest" to="." method="_on_FightTest_pressed"]
[connection signal="pressed" from="Menu2/VBoxContainer/MapTest" to="." method="_on_MapTest_pressed"]
